--- a/dapp/package.json
+++ b/dapp/package.json
@@ -22,6 +22,9 @@
 		"start": "npm run lint & nodemon server.js"
 	},
 	"dependencies": {
+		"@elrondnetwork/dapp-core": "^2.1.19",
+		"@elrondnetwork/erdjs": "^11.1.2",
+		"@elrondnetwork/erdjs-network-providers": "^1.1.3",
 		"@fortawesome/fontawesome-svg-core": "^6.2.1",
 		"@fortawesome/free-brands-svg-icons": "^6.2.1",
 		"@fortawesome/free-regular-svg-icons": "^6.2.1",
